--- a/CSS/search.css
+++ b/CSS/search.css
@@ -1,5 +1,56 @@
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search")
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search");
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 'Roboto', sans-serif;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
 
 .search{
+    border: 1px solid #cccc;
     border-radius: 20px;
+    padding: 5px 10px;
+    width: 400px;
+    display: flex;
+    align-items: center;
+    margin: 20px auto;
+    background-color: #00000006;
+    color: #4b4b4b;
+}
+
+.searchInput{
+    padding: 8px;
+    border: none;
+    background-color: transparent;
+    width: 100%;
+    outline: none;
+}
+
+.search label{
+    height: 20px;
+}
+
+.card-container{
+    display: flex;
+    justify-content: center; /*horizontal*/
+    flex-wrap: nowrap;
+}
+
+.card{
+    width: 300px;
+    background-color: #fff;
+    border: 1px solid #e0e0e0;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 10px 20px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
