--- a/CSS/base.css
+++ b/CSS/base.css
@@ -16,23 +16,41 @@ body{
 .main-header{
     background-color: #F4CDCC;
     color: rgb(0, 0, 0);
-    padding: 1rem;
-    text-align: center;
+    padding: 0.5rem 1rem;
 }
 
-.main-footer{
-    background-color: #F4CDCC;
-    color: rgb(0, 0, 0);
-    padding: 1rem;
-    text-align: center;
+.fotologo{
+    margin-left: 50px;
+    width: 150px;        
+    height: auto;
+    margin-top: 20px;
+}
+
+.icones{
+    width: 50px;        
+    height: auto;
+}
+
+.redesSociais{
+    margin-left: 40%;
+    width: 150px;        
+    height: auto;
+    margin-top: 20px;
+    gap: 50px;
+}
+
+.brigadeiro{
+    width: 80px;        
+    height: auto;
+    margin-left: 1400px;
+    margin-top: 10px;
 }
 
 .menu-opcoes ul {
     display: flex;   /* coloca os <li> em linha */
     gap: 20px;              
     list-style: none;   /* remove os bullets */
-    margin: 0;              
-    padding: 0;            
+    justify-content: center;            
 }
 
 .menu-opcoes li {
@@ -76,4 +94,9 @@ body{
     opacity: 1;  /* Garantir que a imagem ativa fique visível */
 }
 
-
+.main-footer{
+    background-color: #F4CDCC;
+    color: rgb(0, 0, 0);
+    padding: 1rem;
+    text-align: center;
+}
