--- a/CSS/search.css
+++ b/CSS/search.css
@@ -22,13 +22,14 @@
     width: 400px;
     display: flex;
     align-items: center;
-    margin: 20px auto;
+    margin: 10px auto;
+    margin-top: -100px;
     background-color: #00000006;
     color: #4b4b4b;
 }
 
 .searchInput{
-    padding: 8px;
+    padding: 3px 8px;
     border: none;
     background-color: transparent;
     width: 100%;
@@ -46,11 +47,11 @@
 }
 
 .card{
-    width: 300px;
+    width: 350px;
     background-color: #fff;
     border: 1px solid #e0e0e0;
     border-radius: 10px;
     margin: 10px;
-    padding: 10px 20px;
+    padding: 15px 20px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
