--- a/CSS/perfil.css
+++ b/CSS/perfil.css
@@ -1,3 +1,11 @@
+.form-content-ativo{
+    display: block; /* mostra só o ativo */
+}
+
+.form-content{
+    display: none; /* esconde a outra página */
+}
+
 .box-login{
     margin: 16px auto 0;
     position: relative;
@@ -11,15 +19,19 @@
     align-items: center;
 }
 
+.escrita-login{
+    justify-content: center;
+
+}
+
 .icon-profile {
     display: block;
     margin: 0 auto; /* centraliza horizontalmente */
-    width: 200px;
-    height: auto;
+    height: 100px;
     margin-top: -150px;
 }
 
-.botao-email{
+.email-btn{
     width: 400px;
     height: 45px;
     display: flex;
@@ -29,7 +41,7 @@
     margin-top: 20px;
 }
 
-.botao-senha{
+.password_btn{
     width: 400px;
     height: 45px;
     display: flex;
@@ -48,4 +60,27 @@
     border-radius: 20px;
     margin-top: 20px;
     justify-self: center;
+    align-items: center;
+}
+
+/* MODAL */
+
+.modal{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content{
+    background: #fff;
+    padding: 20px;
+    border-radius: 20px;
+    width: 300px;
+    text-align: center;
 }
