--- a/brigadeiria/produtos/templates/carrinho.html
+++ b/brigadeiria/produtos/templates/carrinho.html
@@ -1,26 +1,27 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> CARRINHO | Sayuri's Brigadeiros </title>
+  <title>CARRINHO | Sayuri's Brigadeiros</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Voces&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@400" rel="stylesheet" />
 
-
-  <link rel="stylesheet" href="/CSS/base.css" />
-  <link rel="stylesheet" href="/CSS/carrinho.css" />
-  <link rel="stylesheet" href="/CSS/search.css" />
+  <!-- CSS -->
+  <link rel="stylesheet" href="{% static 'CSS/base.css' %}" />
+  <link rel="stylesheet" href="{% static 'CSS/carrinho.css' %}" />
+  <link rel="stylesheet" href="{% static 'CSS/search.css' %}" />
 </head>
 <body>
 
   <!-- CABEÇALHO -->
   <header class="main-header">
     <div class="container header-grid">
-      <a href="/HTML/index.html" class="brand">
-        <img src="/src/TCC.png" alt="Foto logo" class="fotologo">
+      <a href="{% url 'index' %}" class="brand">
+        <img src="{% static 'src/TCC.png' %}" alt="Foto logo" class="fotologo">
       </a>
 
       <!-- BARRA DE PESQUISA -->
@@ -31,26 +32,25 @@
           </label>
           <input class="searchInput" type="search" id="searchInput" placeholder="Pesquisar...">
         </div>
-
-        <!-- Resultados -->
         <div class="results-box" id="resultsBox"></div>
       </div>
 
-      <img src="/src/ICONS.png" alt="Brigadeiro" class="brigadeiro">
+      <img src="{% static 'src/ICONS.png' %}" alt="Brigadeiro" class="brigadeiro">
     </div>
+
     <!-- NAVEGAÇÃO -->
     <nav class="menu-opcoes">
       <ul class="container nav-list">
-        <li><a href="/HTML/index.html">PÁGINA INICIAL</a></li>
-        <li><a href="/HTML/cardapio.html">CARDÁPIO</a></li>
-        <li><a href="/HTML/perfil.html">PERFIL</a></li>
-        <li><a href="/HTML/carrinho.html">CARRINHO</a></li>
+        <li><a href="{% url 'index' %}">PÁGINA INICIAL</a></li>
+        <li><a href="{% url 'cardapio' %}">CARDÁPIO</a></li>
+        <li><a href="{% url 'perfil' %}">PERFIL</a></li>
+        <li><a href="{% url 'carrinho' %}">CARRINHO</a></li>
         <li><a href="#sobrenos_slide" class="scroll-link">SOBRE NÓS</a></li>
       </ul>
     </nav>
   </header>
 
-
+  <!-- CONTEÚDO -->
   <main>
     <section class="card-section">
       <h2>Meu Pedido</h2>
@@ -69,32 +69,32 @@
   <footer class="main-footer">
     <div class="container footer-grid">
       <div class="footer-logo-esquerda">
-        <img src="/src/TCC.png" alt="Foto logo" class="fotologo1">
+        <img src="{% static 'src/TCC.png' %}" alt="Foto logo" class="fotologo1">
       </div>
 
       <div class="redesSociais" aria-label="Redes sociais">
         <a href="mailto:sayurimo@gmail.com?subject=Contato&body=Olá, gostaria de informações">
-          <img src="/src/e-mail.png" alt="email" class="icones">
+          <img src="{% static 'src/e-mail.png' %}" alt="email" class="icones">
         </a>
         <a href="tel:+5515981453091">
-          <img src="/src/chamada-telefonica.png" alt="telefone" class="icones">
+          <img src="{% static 'src/chamada-telefonica.png' %}" alt="telefone" class="icones">
         </a>
         <a href="https://www.google.com/maps/search/?api=1&query=Rua+Alice+Garcia+da+Silva,+380+B14+-+19" target="_blank" rel="noopener">
-          <img src="/src/localizacao.png" alt="endereço" class="icones">
+          <img src="{% static 'src/localizacao.png' %}" alt="endereço" class="icones">
         </a>
         <a href="https://www.instagram.com/sayuri_brigadeiros?igsh=MWh4Zjc0Ynp6NTA2eg==" target="_blank" rel="noopener">
-          <img src="/src/instagram.png" alt="Instagram" class="icones">
+          <img src="{% static 'src/instagram.png' %}" alt="Instagram" class="icones">
         </a>
       </div>
 
       <div class="footer-logo-direita">
-        <img src="/src/Logo Principal.png" alt="Logo Studio" class="logo-direita">
+        <img src="{% static 'src/Logo Principal.png' %}" alt="Logo Studio" class="logo-direita">
       </div>
     </div>
   </footer>
 
   <!-- JS -->
-  <script src="/JS/search.js"></script>
-  <script src="/JS/script.js"></script>
+  <script src="{% static 'JS/search.js' %}"></script>
+  <script src="{% static 'JS/script.js' %}"></script>
 </body>
 </html>
