--- a/brigadeiria/produtos/templates/index.html
+++ b/brigadeiria/produtos/templates/index.html
@@ -77,11 +77,14 @@
           </div>
         {% endfor %}
         <div class="galeria-texto">
-          <h3>TEXTO</h3>
-          <p>texto texto texto texto</p>
+          <h3>Nossos Doces</h3>
+          <p>Feitos artesanalmente com chocolate belga e ingredientes selecionados.</p>
+          <p>Perfeitos para festas, presentes e momentos especiais.</p>
+          <p>Peça agora e experimente o sabor da felicidade!</p>
         </div>
       </div>
     </section>
+
   </main>
 
   <!-- RODAPÉ -->
