--- a/brigadeiria/produtos/templates/perfil.html
+++ b/brigadeiria/produtos/templates/perfil.html
@@ -53,8 +53,8 @@
   <!-- CONTEÚDO -->
   <main class="container" style="padding: 24px 0;">
     <!-- LOGIN -->
-    <section class="box-login" style="margin-bottom: 24px;">
-      <div id="login" class="form-content-ativo">
+    <section class="box-login" style="margin-bottom: 24px;" id="login">
+      <div class="form-content-ativo">
         <h3 class="escrita-login"> Login </h3>
         <img src="{% static 'src/perfilicon.png' %}" alt="Profile" class="icon-profile">
         <form>
