--- a/brigadeiria/produtos/templates/perfil.html
+++ b/brigadeiria/produtos/templates/perfil.html
@@ -53,7 +53,7 @@
   <!-- CONTEÚDO -->
   <main class="container" style="padding: 24px 0;">
     <!-- LOGIN -->
-    <section class="box-login" style="margin-bottom: 24px;" id="login">
+    <section class="box-login" id="login">
       <div class="form-content-ativo">
         <h3 class="escrita-login"> Login </h3>
         <img src="{% static 'src/perfilicon.png' %}" alt="Profile" class="icon-profile">
@@ -97,7 +97,7 @@
           <input type="text" placeholder="Complemento" required>
 
           <button id="enviar-btn2" type="submit">Criar conta</button>
-          <p>Já tem conta? <a href="#login">Fazer login</a></p>
+          <p>Já tem conta? <a href="#login">Login</a></p>
         </form>
       </div>
     </section>
