--- a/brigadeiria/produtos/templates/index.html
+++ b/brigadeiria/produtos/templates/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="{% static 'CSS/base.css' %}">
   <link rel="stylesheet" href="{% static 'CSS/carrosselegaleria.css' %}">
   <link rel="stylesheet" href="{% static 'CSS/search.css' %}">
+  <link rel="icon" href="{% static 'src/TCC.png' %}" type="image/png">
+
 </head>
 <body>
 
@@ -114,6 +116,10 @@
       </div>
     </div>
   </footer>
+
+  <script>
+  window.BUSCAR_URL = "{% url 'buscar' %}";
+</script>
 
   <!-- JS -->
   <script src="{% static 'JS/search.js' %}"></script>
