--- a/brigadeiria/produtos/templates/index.html
+++ b/brigadeiria/produtos/templates/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="{% static 'CSS/base.css' %}">
   <link rel="stylesheet" href="{% static 'CSS/carrosselegaleria.css' %}">
   <link rel="stylesheet" href="{% static 'CSS/search.css' %}">
+  <link rel="stylesheet" href="{% static 'CSS/sobrenos.css' %}">
   <link rel="icon" href="{% static 'src/TCC.png' %}" type="image/png">
 
 </head>
@@ -84,6 +85,24 @@
           <p>Perfeitos para festas, presentes e momentos especiais.</p>
           <p>Peça agora e experimente o sabor da felicidade!</p>
         </div>
+      </div>
+    </section>
+
+    <section class="sobrenos_slide">
+      <div class="foto_sandra">
+        <img src="{% static 'src/confeitaria-profissional.webp' %}">
+      </div>
+      <div class="sobrenos_texto">
+        <h3 class="escrita">SOBRE NÓS</h3>
+        <p class="sobrenos">Bem-vindo(a) à Sayuri’s Brigadeiros — um cantinho doce feito com amor, &nbsp
+                            cuidado e muito chocolate! 🍫 Aqui, acreditamos que cada pedacinho de &nbsp
+                            brigadeiro carrega um pouco de alegria e carinho. Trabalhamos com ingredientes &nbsp
+                            selecionados, sempre prezando pela qualidade e sabor artesanal que tornam &nbsp
+                            nossos doces únicos. De presentes delicados a mesas de festa, nossos brigadeiros &nbsp
+                            são feitos à mão, com dedicação e o toque especial que transforma qualquer momento &nbsp
+                            em uma lembrança inesquecível.
+
+        ✨ Sayuri’s Brigadeiros — o sabor que abraça o coração. 💕</p>
       </div>
     </section>
 
