--- a/brigadeiria/produtos/static/CSS/cardapio.css
+++ b/brigadeiria/produtos/static/CSS/cardapio.css
@@ -7,9 +7,8 @@
 }
 
 .card {
-    background-color: #fad8d6;
-    border: 1px solid #b57f7d;
-    border-radius: 25px;
+    background-color: #fff4f3;
+    border-radius: 15px;
     text-align: center;
     padding: 0.6rem;
     box-shadow: 0 2px 5px #f4cdcc;
