--- a/brigadeiria/produtos/templates/index.html
+++ b/brigadeiria/produtos/templates/index.html
@@ -88,7 +88,7 @@
       </div>
     </section>
 
-    <section class="sobrenos_slide">
+    <section id="sobrenos_slide" class="sobrenos_slide">
       <div class="foto_sandra">
         <img src="{% static 'src/confeitaria-profissional.webp' %}">
       </div>
@@ -138,7 +138,7 @@
 
   <script>
   window.BUSCAR_URL = "{% url 'buscar' %}";
-</script>
+  </script>
 
   <!-- JS -->
   <script src="{% static 'JS/search.js' %}"></script>
