--- a/brigadeiria/produtos/templates/cardapio.html
+++ b/brigadeiria/produtos/templates/cardapio.html
@@ -79,6 +79,10 @@
     </div>
   </footer>
 
+  <script>
+    window.BUSCAR_URL = "{% url 'buscar' %}";
+  </script>
+  
   <!-- JS -->
   <script src="{% static 'JS/search.js' %}" defer></script>
   <script src="{% static 'JS/script.js' %}" defer></script>
