--- a/brigadeiria/produtos/templates/carrinho.html
+++ b/brigadeiria/produtos/templates/carrinho.html
@@ -24,10 +24,13 @@
       </a>
 
       <div class="search-wrapper">
-        <div class="search">
-          <label for="searchInput"><span class="material-symbols-outlined">search</span></label>
+        <div class="search" id="search">
+          <label for="searchInput">
+            <span class="material-symbols-outlined">search</span>
+          </label>
           <input class="searchInput" type="search" id="searchInput" placeholder="Pesquisar...">
         </div>
+        <div class="results-box" id="resultsBox"></div>
       </div>
 
       <img src="{% static 'src/ICONS.png' %}" alt="Brigadeiro" class="brigadeiro">
@@ -71,6 +74,7 @@
   </main>
 
 
+
   <footer class="main-footer">
     <div class="container footer-grid">
       <div class="footer-logo-esquerda">
@@ -78,8 +82,12 @@
       </div>
 
       <div class="redesSociais">
-        <a href="mailto:sayurimo@gmail.com"><img src="{% static 'src/e-mail.png' %}" alt="email" class="icones"></a>
-        <a href="tel:+5515981453091"><img src="{% static 'src/chamada-telefonica.png' %}" alt="telefone" class="icones"></a>
+        <a href="mailto:sayurimo@gmail.com">
+          <img src="{% static 'src/e-mail.png' %}" alt="email" class="icones">
+        </a>
+        <a href="tel:+5515981453091">
+          <img src="{% static 'src/chamada-telefonica.png' %}" alt="telefone" class="icones">
+        </a>
         <a href="https://www.google.com/maps/search/?api=1&query=Rua+Alice+Garcia+da+Silva,+380+B14+-+19" target="_blank">
           <img src="{% static 'src/localizacao.png' %}" alt="endereço" class="icones">
         </a>
@@ -94,8 +102,14 @@
     </div>
   </footer>
 
-  <!-- JS -->
-  <script src="{% static 'JS/search.js' %}" defer></script>
-  <script src="{% static 'JS/script.js' %}" defer></script>
+<!-- 🔹 Necessário para a busca funcionar -->
+<script>
+  window.BUSCAR_URL = "{% url 'buscar' %}";
+</script>
+
+<!-- 🔹 Ordem correta: primeiro search.js (busca), depois script.js (restante do site) -->
+<script src="{% static 'JS/search.js' %}"></script>
+<script src="{% static 'JS/script.js' %}"></script>
+
 </body>
 </html>
