--- a/brigadeiria/produtos/templates/perfil.html
+++ b/brigadeiria/produtos/templates/perfil.html
@@ -73,7 +73,7 @@
           </div>
 
           <button id="enviar-btn1" type="submit">Entrar</button>
-          <p>Não tem conta? <a href="#registerSection">Cadastre-se</a></p>
+          <p>Não tem conta? <a href="#registerSection" class="register-btn">Cadastre-se</a></p>
         </form>
       </div>
     </section>
