--- a/brigadeiria/produtos/static/CSS/base.css
+++ b/brigadeiria/produtos/static/CSS/base.css
@@ -12,8 +12,10 @@
 }
 
 html{ 
-  scroll-behavior:smooth; 
-  height:100%; 
+  scroll-behavior: smooth;
+  height: 100%;
+  scrollbar-gutter: stable;  /* <-- fixa o espaço da rolagem */
+  overflow-y: scroll;        /* <-- garante que o espaço da barra sempre exista */
 }
 
 body{
@@ -45,8 +47,14 @@ body{
 }
 
 /* logo + brigadeiro */
-.fotologo{ width:150px; height:auto; }
-.brigadeiro{ width:80px; height:auto; }
+.fotologo{ 
+  width:150px; 
+  height:auto; 
+}
+
+.brigadeiro{ 
+  width:80px; 
+  height:auto; }
 
 /* NAV */
 .menu-opcoes{ 
@@ -125,8 +133,14 @@ body{
 }
 
 @media (max-width: 560px){
-  .fotologo{ width:120px; }
-  .brigadeiro{ width:64px; }
+  .fotologo{ 
+    width:120px; 
+  }
+
+  .brigadeiro{ 
+    width:64px; 
+  }
+
   .footer-grid{
     grid-template-columns: 1fr;
     text-align:center;
