--- a/brigadeiria/produtos/templates/cardapio.html
+++ b/brigadeiria/produtos/templates/cardapio.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="{% static 'CSS/base.css' %}" />
   <link rel="stylesheet" href="{% static 'CSS/search.css' %}" />
   <link rel="stylesheet" href="{% static 'CSS/cardapio.css' %}" />
+  <link rel="stylesheet" href="{% static 'CSS/descricao.css' %}" />
 </head>
 <body>
 
@@ -52,7 +53,47 @@
 
   <!-- CONTEÚDO -->
   <main>
-    <div class="produto-grid"></div>
+    {% for categoria, produtos_categoria in produtos_por_categoria.items %}
+      <section class="categoria-section">
+        <h2 class="categoria-nome">{{ categoria }}</h2>
+
+        <div class="produto-grid">
+          {% for produto in produtos_categoria %}
+            <div class="card-produto">
+              <img src="{{ produto.imagem.url }}" alt="{{ produto.nome }}">
+              <div class="card-info">
+                <h3>{{ produto.nome }}</h3>
+                <p class="preco">R$ {{ produto.preco|floatformat:2 }}</p>
+                <button class="ver-descricao" onclick="mostrarDescricao('{{ produto.nome|escapejs }}', '{{ produto.descricao|escapejs }}')">Ver descrição</button>
+
+                <!-- Descrição do produto escondida -->
+                <div class="descricao_produto hidden" id="{{ produto.nome }}-descricao">
+                  <div class="descricao-overlay" onclick="fecharDescricao('{{ produto.nome }}')"></div> <!-- Overlay -->
+                  <div class="descricao-content">
+                    <h4>{{ produto.nome }}</h4>
+                    <p>{{ produto.descricao }}</p>
+
+                    <div class="contador">
+                      <button class="menos">-</button>
+                      <input type="number" min="25" value="25">
+                      <button class="mais">+</button>
+                    </div>
+
+                    <button 
+                      class="adicionar-carrinho"
+                      data-name="{{ produto.nome }}"
+                      data-category="{{ produto.categoria.nome }}"
+                      data-price="{{ produto.preco|floatformat:2 }}">
+                      Adicionar ao Carrinho
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+      </section>
+    {% endfor %}
   </main>
 
   <!-- RODAPÉ -->
@@ -86,5 +127,7 @@
   <!-- JS -->
   <script src="{% static 'JS/search.js' %}" defer></script>
   <script src="{% static 'JS/script.js' %}" defer></script>
+  <script src="{% static 'JS/descricaoProduto.js' %}" defer></script>
+
 </body>
 </html>
