--- a/brigadeiria/produtos/static/CSS/descricao.css
+++ b/brigadeiria/produtos/static/CSS/descricao.css
@@ -164,3 +164,12 @@
   position: relative;
   z-index: 10000;
 }
+
+.ver-descricao{
+  width: 100px;
+  height: 40px;
+  background-color: #f5a6a6;
+  border-radius: 20px;
+  border: 2px #f5a6a6;
+  color: #70482A;
+}
